rotate keys certificates and remove keys folders: use volume